--- a/css/flex-items.css
+++ b/css/flex-items.css
@@ -86,3 +86,12 @@ button {
   align-self: center;
   margin-left: 50px;
 }
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  border-top: 5px solid black;
+  border-bottom: 5px solid black;
+}
