[Feat] 계산기 기능 추가, 개선. 상단 수식창 추가, 새로운 숫자입력시 초기화, 연산자 클릭 시 상단 수식창에 표시.

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -30,7 +30,6 @@ h1 {
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
-  font-size: 50px;
   padding-right: 27px;
 }
 
@@ -38,6 +37,12 @@ h1 {
   height: 300px;
   display: flex;
   flex-direction: column;
+}
+
+.text-area {
+  font-size: 50px;
+}
+.text-area {
 }
 
 .button-area {
