--- a/css/flex-items.css
+++ b/css/flex-items.css
@@ -75,7 +75,7 @@ button {
   width: 100px;
   height: 100px;
   padding: 0;
-  background-color: antiquewhite;
+  background-color: #f4eee0;
   margin: 5px;
   cursor: pointer;
 }
