--- a/css/calculator.css
+++ b/css/calculator.css
@@ -47,13 +47,16 @@ h1 {
 .text-area {
   font-size: 38px;
   word-break: break-all;
-  /* height: 40px; */
-  margin-bottom: 10px;
+  min-height: 40px;
+  margin-bottom: 5px;
 }
 .text-list-area {
   word-break: break-all;
-  height: 20px;
+  /* height: 20px; */
   color: #313131;
+}
+.operator-align {
+  padding-bottom: 5px;
 }
 
 .button-area {
