--- a/css/calculator.css
+++ b/css/calculator.css
@@ -48,12 +48,13 @@ h1 {
   font-size: 38px;
   word-break: break-all;
   min-height: 40px;
-  margin-bottom: 5px;
+  /* margin-bottom: 5px; */
 }
 .text-list-area {
   word-break: break-all;
   /* height: 20px; */
-  color: #313131;
+  color: #6a6666;
+  font-size: 20px;
 }
 .operator-align {
   padding-bottom: 5px;
