[Fix] 계산기 버그 수정, 업데이트 0중복클릭버그, 3자리수 콤마, 콤마에 따른 연산처리 수정. +- 값 수정필요. 3자리수 소수점관련 버그 수정필요(정규표현식 수정)

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -48,6 +48,11 @@ h1 {
   font-size: 38px;
   word-break: break-all;
   min-height: 40px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
   /* margin-bottom: 5px; */
 }
 .text-list-area {
