--- a/css/notepad/notepad.css
+++ b/css/notepad/notepad.css
@@ -233,7 +233,7 @@ button {
 .btn-delete {
   width: 100%;
   height: 100%;
-  background: url(../../../assets/img_notepad/icon-delete.svg);
+  background: url(../../assets/img_notepad/icon-delete.svg);
 }
 /* form */
 .label-style,
