--- a/css/lotto/ui/modules/script.css
+++ b/css/lotto/ui/modules/script.css
@@ -9,3 +9,24 @@
   border-radius: 15px;
   cursor: pointer;
 }
+.img-lotto-container {
+  max-height: 300px;
+  align-items: center;
+  flex-wrap: nowrap;
+  overflow-y: scroll;
+}
+
+.img-lotto-container::-webkit-scrollbar {
+  width: 10px;
+}
+.img-lotto-container::-webkit-scrollbar-thumb {
+  background-color: #085c67;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+.img-lotto-container::-webkit-scrollbar-track {
+  background-color: #00bcd4;
+  border-radius: 10px;
+  box-shadow: inset 0px 0px 5px white;
+}
