[Feat] racing-car 페이지 구현완료

--- a/css/car-racing/script.css
+++ b/css/car-racing/script.css
@@ -3,3 +3,10 @@
   flex-direction: column;
   margin-bottom: 15px;
 }
+.car-move-section {
+  display: flex;
+}
+.winner-container,
+.result {
+  display: none;
+}
